# universal-vibet-search-mcp

./: .gitignore  LICENSE  README.md  pyproject.toml
universal_vibet_search_mcp/: server.py
