[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "universal-vibet-search-mcp"
version = "0.1.0"
description = "Free multi-engine web search MCP server — no API keys required"
readme = "README.md"
license = "MIT"
requires-python = ">=3.11"
authors = [{ name = "hdworker" }]
keywords = ["mcp", "web-search", "fastmcp", "duckduckgo", "free-search"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Internet :: WWW/HTTP :: Indexing/Search",
]
dependencies = [
    "fastmcp>=3.0.0",
    "ddgs>=9.0.0",
]

[project.urls]
Homepage = "https://github.com/hdworker/universal-vibet-search-mcp"
Repository = "https://github.com/hdworker/universal-vibet-search-mcp"
Issues = "https://github.com/hdworker/universal-vibet-search-mcp/issues"
Upstream = "https://github.com/HKUDS/Vibe-Trading"

[project.scripts]
universal-vibet-search-mcp = "src.server:main"
